crates/fig-parser/tests/snapshots/integration_tests__interfaces__effect_methods.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Interface:
      visibility: Default
      annotations: []
      name: Allocator
      generic_params: []
      extends: []
      requires: []
      methods:
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: true
          receiver: ~
          name: allocate
          generic_params: []
          self_param:
            is_pointer: true
            is_mutable: true
          params:
            - name: size
              ty: USize
          return_types:
            - Pointer:
                nullable: false
                mutable: true
                element_type: U8
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: true
          receiver: ~
          name: deallocate
          generic_params: []
          self_param:
            is_pointer: true
            is_mutable: true
          params:
            - name: ptr
              ty:
                Pointer:
                  nullable: false
                  mutable: true
                  element_type: U8
          return_types:
            - Ok
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: true
          receiver: ~
          name: reallocate
          generic_params: []
          self_param:
            is_pointer: true
            is_mutable: true
          params:
            - name: ptr
              ty:
                Pointer:
                  nullable: false
                  mutable: true
                  element_type: U8
            - name: size
              ty: USize
          return_types:
            - Pointer:
                nullable: false
                mutable: true
                element_type: U8
