crates/fig-parser/tests/snapshots/integration_tests__interfaces__multiple_methods.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Interface:
      visibility: Default
      annotations: []
      name: Display
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      extends: []
      requires: []
      methods:
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: false
          receiver: ~
          name: display
          generic_params: []
          self_param:
            is_pointer: true
            is_mutable: false
          params: []
          return_types:
            - Path:
                segments:
                  - T
                generic_args: []
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: false
          receiver: ~
          name: to_string
          generic_params: []
          self_param:
            is_pointer: true
            is_mutable: false
          params: []
          return_types:
            - Array:
                element_type: U8
                size: ~
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: false
          receiver: ~
          name: format
          generic_params: []
          self_param:
            is_pointer: true
            is_mutable: false
          params:
            - name: fmt
              ty:
                Array:
                  element_type: U8
                  size: ~
          return_types:
            - Array:
                element_type: U8
                size: ~
