crates/fig-parser/tests/snapshots/integration_tests__interfaces__with_extends.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Interface:
      visibility: Default
      annotations: []
      name: Ordered
      generic_params: []
      extends:
        - Path:
            segments:
              - Eq
            generic_args: []
        - Path:
            segments:
              - PartialOrd
            generic_args: []
      requires: []
      methods:
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: false
          receiver: ~
          name: compare
          generic_params: []
          self_param:
            is_pointer: true
            is_mutable: false
          params:
            - name: other
              ty:
                Pointer:
                  nullable: false
                  mutable: false
                  element_type: SelfType
          return_types:
            - I32
