crates/fig-parser/tests/snapshots/integration_tests__interfaces__with_requires.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Interface:
      visibility: Default
      annotations: []
      name: Numeric
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      extends: []
      requires:
        - Path:
            segments:
              - Add
            generic_args: []
        - Path:
            segments:
              - Sub
            generic_args: []
        - Path:
            segments:
              - Mul
            generic_args: []
        - Path:
            segments:
              - Div
            generic_args: []
      methods:
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: false
          receiver: ~
          name: zero
          generic_params: []
          self_param: ~
          params: []
          return_types:
            - Path:
                segments:
                  - T
                generic_args: []
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: false
          receiver: ~
          name: one
          generic_params: []
          self_param: ~
          params: []
          return_types:
            - Path:
                segments:
                  - T
                generic_args: []
